deploy/service.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes the gontador service
    creationTimestamp: '2018-12-31T06:50:19Z'
    labels:
      app: gontador
    name: gontador-http
    namespace: gontador
    resourceVersion: '3000'
  spec:
    ports:
      - name: gontador-http
        port: 3000
        protocol: TCP
        targetPort: 3000
      # - name: gontador-grpc
      #   port: 3001
      #   protocol: TCP
      #   targetPort: 3001
    selector:
      app: gontador
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes the gontador grpc service
    creationTimestamp: '2018-12-31T06:50:19Z'
    labels:
      app: gontador
    name: gontador-grpc
    namespace: gontador
    resourceVersion: '3000'
  spec:
    ports:
      - name: gontador-grpc
        port: 3001
        nodePort: 30001
    selector:
      app: gontador
    type: NodePort
  status:
    loadBalancer: {}
